--- a/Term Project/20190904.html
+++ b/Term Project/20190904.html
@@ -15,13 +15,15 @@
   <h4>결과물</h4>
   <p>소스코드</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="./20151671_20190904.png">
-    <img src="./20151671_20190904.png" alt="lobster" style="width:auto;">
+    <source media="(min-width: 768px)" srcset=".../20151671_20190904.png">
+    <img src="../20151671_20190904.png" alt="lobster" style="width:auto;">
   </picture>
   <p>결과화면</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="./20151671_20190904_2.png">
-    <img src="./20151671_20190904_2.png" alt="lobster" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="dmsdn0101.github.io/Term Project/Picture/20190904/20151671_20190904.png
+">
+    <img src="dmsdn0101.github.io/Term Project/Picture/20190904/20151671_20190904.png
+" alt="lobster" style="width:auto;">
   </picture>
 </section>
 </body></html>
