--- a/Homepage.html
+++ b/Homepage.html
@@ -16,7 +16,7 @@
   <ul>
     <li id="week01">1주
     <ol type="1">
-      <li><a href="https://dmsdn0101.github.io/Term%20Project/20190904.html" target="_blank">1주차 숙제</a></li>
+      <li><a href="https://dmsdn0101.github.io/Term%20Project/20190904.html" target="_blank">1주차 제</a></li>
     </ol>
   </li></ul>
   </section>
