--- a/Term Project/20190904.html
+++ b/Term Project/20190904.html
@@ -23,7 +23,7 @@
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/Term%20Project/Picture/20190904/20151671_20190904.png
 ">
     <img src="https://dmsdn0101.github.io/Term%20Project/Picture/20190904/20151671_20190904.png
-" alt="lobster" style="width:auto;">
+" alt="lobster" style="width:1000px;">
   </picture>
 </section>
 </body></html>
