--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title>이은우 홈페이지</title>
-  </head>
   <body><header></header>
   <section>
     <h1>20151671 이은우</h1>
@@ -19,7 +18,13 @@
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/Term%20Project/20190904.html" target="_blank">1주차</a></li>
     </ol>
-  </li></ul>
+  </li>
+    <li id="week02">2주
+    <ol type="1">
+      <li><a href="https://dmsdn0101.github.io/20190911/pageTest.html" target="_blank">pageTest</a></li>
+    </ol>
+    </li>
+    </ul>
   </section>
   </body>
 </head>
