--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <li id="week02">2주
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/20190911/pageTest.html" target="_blank">pageTest</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190911/pageTest1.html" target="_blank">pageTest</a></li>
     </ol>
     </li>
     </ul>
