--- a/20190911/pageTest.html
+++ b/20190911/pageTest.html
@@ -16,14 +16,14 @@
   <p>소스코드</p>
   <picture>
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/1.PNG">
-    <img src="https://dmsdn0101.github.io/20190911/1_1.PNG" alt="lobster" style="width:auto;">
+    <img src="https://dmsdn0101.github.io/20190911/1_1.PNG" alt="Error" style="width:auto;">
   </picture>
   <p>결과화면</p>
   <picture>
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/2.PNG
 ">
     <img src="https://dmsdn0101.github.io/20190911/2_1.PNG
-" alt="lobster" style="width:auto;">
+" alt="Error" style="width:auto;">
   </picture>
 </section>
 </body></html>
