--- a/20190911/pageTest1.html
+++ b/20190911/pageTest1.html
@@ -15,14 +15,14 @@
   <h4>결과물</h4>
   <p>소스코드</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/3.PNG">
-    <img src="https://dmsdn0101.github.io/20190911/3_1.PNG" alt="lobster" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/3.png">
+    <img src="https://dmsdn0101.github.io/20190911/3_1.png" alt="lobster" style="width:auto;">
   </picture>
   <p>결과화면</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/4.PNG
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/4.png
 ">
-    <img src="https://dmsdn0101.github.io/20190911/4_1.PNG
+    <img src="https://dmsdn0101.github.io/20190911/4_1.png
 " alt="lobster" style="width:auto;">
   </picture>
 </section>
