--- a/20190911/pageTest1.html
+++ b/20190911/pageTest1.html
@@ -16,14 +16,14 @@
   <p>소스코드</p>
   <picture>
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/3.png">
-    <img src="https://dmsdn0101.github.io/20190911/3_1.png" alt="lobster" style="width:auto;">
+    <img src="https://dmsdn0101.github.io/20190911/3_1.png" alt="Error" style="width:auto;">
   </picture>
   <p>결과화면</p>
   <picture>
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/4.png
 ">
     <img src="https://dmsdn0101.github.io/20190911/4_1.png
-" alt="lobster" style="width:auto;">
+" alt="Error" style="width:auto;">
   </picture>
 </section>
 </body></html>
