--- a/20190911/pageTest.html
+++ b/20190911/pageTest.html
@@ -15,14 +15,14 @@
   <h4>결과물</h4>
   <p>소스코드</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/1.png">
-    <img src="https://dmsdn0101.github.io/20190911/1_1.png" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/1_1.png">
+    <img src="https://dmsdn0101.github.io/20190911/1.png" alt="Error" style="width:auto;">
   </picture>
   <p>결과화면</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/2.png
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/2_1.png
 ">
-    <img src="https://dmsdn0101.github.io/20190911/2_1.png
+    <img src="https://dmsdn0101.github.io/20190911/2.png
 " alt="Error" style="width:auto;">
   </picture>
 </section>
