--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>이은우 홈페이지</title>
   <body><header></header>
   <section>
-    <h1>웹서버 </h1>
+    <h1>웹서버 프로그래밍</h1>
   <ul>
     <li id="week01">1주
     <ol type="1">
