--- a/20190911/pageTest.html
+++ b/20190911/pageTest.html
@@ -13,6 +13,8 @@
   <title>2주차</title></head>
 <body><header></header><section>
   <h4>결과물</h4>
+  <p>URL 주소<p>
+  <a href="https://dmsdn0101.github.io/20190911/pageTest.html" target="_blank">hello</a>
   <p>소스코드</p>
   <picture>
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/1_1.png">
