--- a/Term Project/20190904.html
+++ b/Term Project/20190904.html
@@ -13,6 +13,8 @@
   <title>1주차</title></head>
 <body><header></header><section>
   <h4>결과물</h4>
+  <p>URL 주소</p>
+    <a href="http://203.237.142.245/~s20151671/hello.jsp" target="_blank">hello</a>
   <p>소스코드</p>
   <picture>
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/Term%20Project/Picture/20190904/20151671_20190904_2.png">
