--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       <li><a href="https://dmsdn0101.github.io/20190911/pageTest1.html" target="_blank">pageTest1</a></li>
     </ol>
     </li>
+    <li id="week02">3주
+    <ol type="1">
+      
+    </ol>
+    </li>
     </ul>
   </section>
   </body>
