--- a/20190911/pageTest.html
+++ b/20190911/pageTest.html
@@ -17,14 +17,14 @@
   <a href="http://203.237.142.245/~s20151671/pageTest.jsp" target="_blank">pageTest</a>
   <p>소스코드</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/1_1.png">
-    <img src="https://dmsdn0101.github.io/20190911/1.png" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/1.png">
+    <img src="https://dmsdn0101.github.io/20190911/1_1.png" alt="Error" style="width:auto;">
   </picture>
   <p>결과화면</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/2_1.png
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/2.png
 ">
-    <img src="https://dmsdn0101.github.io/20190911/2.png
+    <img src="https://dmsdn0101.github.io/20190911/2_1.png
 " alt="Error" style="width:auto;">
   </picture>
 </section>
