--- a/20190911/pageTest1.html
+++ b/20190911/pageTest1.html
@@ -17,14 +17,14 @@
   <a href="http://203.237.142.245/~s20151671/pageTest1.jsp" target="_blank">pageTest1</a>
   <p>소스코드</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/3_1.png">
-    <img src="https://dmsdn0101.github.io/20190911/3.png" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/3.png">
+    <img src="https://dmsdn0101.github.io/20190911/3_1.png" alt="Error" style="width:auto;">
   </picture>
   <p>결과화면</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/4_1.png
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190911/4.png
 ">
-    <img src="https://dmsdn0101.github.io/20190911/4.png
+    <img src="https://dmsdn0101.github.io/20190911/4_1.png
 " alt="Error" style="width:auto;">
   </picture>
 </section>
