--- a/20190918/form-search-get1.html
+++ b/20190918/form-search-get1.html
@@ -26,16 +26,12 @@
   </picture>
   <p>결과화면</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190918/form-search-get-hp.png
-">
-    <img src="https://dmsdn0101.github.io/20190918/form-search-get-hp_1.png
-" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190918/form-search-get-hp.png">
+    <img src="https://dmsdn0101.github.io/20190918/form-search-get-hp_1.png" alt="Error" style="width:auto;">
   </picture>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190918/form-search-get-hp2.png
-">
-    <img src="https://dmsdn0101.github.io/20190918/form-search-get-hp2-1.png
-" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190918/form-search-get-hp2.png">
+    <img src="https://dmsdn0101.github.io/20190918/form-search-get-hp2-1.png" alt="Error" style="width:auto;">
   </picture>
 </section>
 </body></html>
