--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </br>
     <li id="week02">3주
     <ol type="1">
-      
+      <li><a href="https://dmsdn0101.github.io/20190918/form-search-get1.html" target="_blank">form-search-get</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190911/form-search-post1.html" target="_blank">form-search-post</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190911/user1.html" target="_blank">user</a></li>
     </ol>
     </li>
     </ul>
