--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       <li><a href="https://dmsdn0101.github.io/20190918/form-search-get1.html" target="_blank">form-search-get</a></li>
       <li><a href="https://dmsdn0101.github.io/20190918/form-search-post1.html" target="_blank">form-search-post</a></li>
       <li><a href="https://dmsdn0101.github.io/20190918/user1.html" target="_blank">user</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190919/forwardParamTest.html" target="_blank">forwardParamTest</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190919/scriptMethod.html" target="_blank">scriptMethod</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190919/scriptTest.html" target="_blank">scriptTest</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190919/userLogin1.html" target="_blank">userLogin1</a></li>
     </ol>
     </li>
     </ul>
