--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li><a href="https://dmsdn0101.github.io/20190919/forwardParamTest.html" target="_blank">forwardParamTest</a></li>
       <li><a href="https://dmsdn0101.github.io/20190919/scriptMethod.html" target="_blank">scriptMethod</a></li>
       <li><a href="https://dmsdn0101.github.io/20190919/scriptTest.html" target="_blank">scriptTest</a></li>
-      <li><a href="https://dmsdn0101.github.io/20190919/userLogin1.html" target="_blank">userLogin1</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190919/userLogin1.html" target="_blank">userLogin</a></li>
     </ol>
     </li>
     </ul>
