--- a/20190926/userReg.html
+++ b/20190926/userReg.html
@@ -28,7 +28,7 @@
 			<li><a href="hive.dju.ac.kr">조회</a></li>
 		</ul></nav>
 	<section>
-		<form action="userReg.jsp" method="post">
+		<form action="http://203.237.142.245/~s20151671/week4/userReg.jsp" method="post">
 			<fieldset><legend>회원 정보</legend>
 				<fieldset><legend>이름/이메일</legend>
 					<label for="stud_name">이름</label>
