--- a/20190926/userReg1.html
+++ b/20190926/userReg1.html
@@ -14,7 +14,7 @@
 <body><header></header><section>
   <h4>결과물</h4>
   <p>JSP 주소</p>
-  <a href="http://203.237.142.245/~s20151671/week3/userLogin.jsp" target="_blank">userLogin</a>
+  <a href="http://203.237.142.245/~s20151671/week3/userLogin.jsp" target="_blank">userReg</a>
   <p>소스코드</p>
   <picture>
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190926/userReg.png">
