--- a/20190926/userReg1.html
+++ b/20190926/userReg1.html
@@ -14,7 +14,7 @@
 <body><header></header><section>
   <h4>결과물</h4>
   <p>주소</p>
-  <a href="http://https://dmsdn0101.github.io/20190926/userReg.html" target="_blank">userReg.html</a>
+  <a href="https://dmsdn0101.github.io/20190926/userReg.html" target="_blank">userReg.html</a>
   <a href="http://203.237.142.245/~s20151671/week3/userLogin.jsp" target="_blank">userReg.jsp</a>
   <p>소스코드</p>
   <picture>
