--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
       <li><a href="https://dmsdn0101.github.io/20190926/userReg1.html" target="_blank">userReg</a></li>
     </ol>
     </li>
+    <li id="week02">4주
+    <ol type="1">
+      <li><a href="https://dmsdn0101.github.io/20190926/userRequest.html" target="_blank">userRequest</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190926/userResponse.html" target="_blank">userResponse</a></li>
+    </ol>
+    </li>
     </ul>
   </section>
   </body>
