--- a/20190918/form-search-post1.html
+++ b/20190918/form-search-post1.html
@@ -14,6 +14,7 @@
 <body><header></header><section>
   <h4>결과물</h4>
   <p>JSP 주소</p>
+  <a href="https://dmsdn0101.github.io/20190918/form-search-post.html" target="_blank">form-search-post</a>
   <a href="http://203.237.142.245/~s20151671/week3/welcome.jsp" target="_blank">welcome</a>
   <p>소스코드</p>
   <picture>
