--- a/20190926/userRequest.html
+++ b/20190926/userRequest.html
@@ -14,7 +14,7 @@
 <body><header></header><section>
   <h4>결과물</h4>
   <p>주소</p>
-  <a href="http://203.237.142.245/~s20151671/week4/userRequest.jsp" target="_blank">userRequest.jsp</a>
+  <a href="http://203.237.142.245/~s20151671/week4/userRequest.jsp?userName=kdhong&userPasswd=pass" target="_blank">userRequest.jsp</a>
   <p>소스코드</p>
   <picture>
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20190926/userRequest.png">
