--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/20190926/userRequest.html" target="_blank">userRequest</a></li>
       <li><a href="https://dmsdn0101.github.io/20190926/userResponse.html" target="_blank">userResponse</a></li>
+      <li><a href="https://dmsdn0101.github.io/downloads/resRedirect.html" target="_blank">resRedirect</a></li>
+      <li><a href="https://dmsdn0101.github.io/downloads/userOut.html" target="_blank">userOut</a></li>
+      <li><a href="https://dmsdn0101.github.io/downloads/slogin1.html" target="_blank">slogin</a></li>
     </ol>
     </li>
     </ul>
