--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
      <li id="week01">5주
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/downloads/slogin1.html" target="_blank">slogin</a></li>
+      <li><a href="https://dmsdn0101.github.io/downloads/userApplication.html" target="_blank">userApplication</a></li>
+      <li><a href="https://dmsdn0101.github.io/downloads/blogin1.html" target="_blank">blogin</a></li>
     </ol>
   </li>
     </ul>
