--- a/20191010/javas.html
+++ b/20191010/javas.html
@@ -15,20 +15,20 @@
   <h4>결과물</h4>
   <p>소스코드</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/Login.png">
-    <img src="https://dmsdn0101.github.io/20191010/Login_1.png" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/picture/Login.png">
+    <img src="https://dmsdn0101.github.io/20191010/picture/Login_1.png" alt="Error" style="width:auto;">
   </picture>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/Dice.png">
-    <img src="https://dmsdn0101.github.io/20191010/Dice_1.png" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/picture/Dice.png">
+    <img src="https://dmsdn0101.github.io/20191010/picture/Dice_1.png" alt="Error" style="width:auto;">
   </picture>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/DbLogin.png">
-    <img src="https://dmsdn0101.github.io/20191010/DbLogin_1.png" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/picture/DbLogin.png">
+    <img src="https://dmsdn0101.github.io/20191010/picture/DbLogin_1.png" alt="Error" style="width:auto;">
   </picture>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/BeanTest.png">
-    <img src="https://dmsdn0101.github.io/20191010/BeanTest.png" alt="Error" style="width:auto;">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/picture/BeanTest.png">
+    <img src="https://dmsdn0101.github.io/20191010/picture/BeanTest.png" alt="Error" style="width:auto;">
   </picture>
   <p>결과화면</p>
   추가예정
