--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
       <li><a href="https://dmsdn0101.github.io/20191002/userApplication.html" target="_blank">userApplication</a></li>
       <li><a href="https://dmsdn0101.github.io/20191002/blogin1.html" target="_blank">blogin</a></li>
     </ol>
-  </li>
+    </li>
+    </li>
+     <li id="week01">6주
+    <ol type="1">
+      <li><a href="https://dmsdn0101.github.io/20191010/javas.html" target="_blank">javas</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191010/Dice.html" target="_blank">Dice</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191010/Dice_Main.html" target="_blank">Dice_Main</a></li>
+    </ol>
+    </li>
     </ul>
   </section>
   </body>
