--- a/20191010/Dice_Main.html
+++ b/20191010/Dice_Main.html
@@ -24,6 +24,9 @@
     <img src="https://dmsdn0101.github.io/20191002/picture/Dice_Main_1_1.png" alt="Error" style="width:auto;">
   </picture>
   <p>결과화면</p>
-  추가예정
+  <picture>
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191010/picture/Dice_Main_1_F.png">
+    <img src="https://dmsdn0101.github.io/20191002/picture/Dice_Main_1_F_1.png" alt="Error" style="width:auto;">
+  </picture>
 </section>
 </body></html>
