--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <li><a href="https://dmsdn0101.github.io/downloads/userOut.html" target="_blank">userOut</a></li>
     </ol>
     </li>
-     <li id="week01">5주
+    <li id="week01">5주
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/downloads/slogin1.html" target="_blank">slogin</a></li>
       <li><a href="https://dmsdn0101.github.io/20191002/userApplication.html" target="_blank">userApplication</a></li>
@@ -55,11 +55,17 @@
     </ol>
     </li>
     </li>
-     <li id="week01">6주
+    <li id="week01">6주
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/20191010/javas.html" target="_blank">javas</a></li>
       <li><a href="https://dmsdn0101.github.io/20191010/Dice.html" target="_blank">Dice</a></li>
       <li><a href="https://dmsdn0101.github.io/20191010/Dice_Main.html" target="_blank">Dice_Main</a></li>
+    </ol>
+    </li>
+    <li id="week01">7주
+    <ol type="1">
+      <li><a href="https://dmsdn0101.github.io/20191016/dice2.html" target="_blank">dice2</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191016/Dice_Main_2.html" target="_blank">Dice_Main_2</a></li>
     </ol>
     </li>
     </ul>
