--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/20191016/dice2.html" target="_blank">dice2</a></li>
       <li><a href="https://dmsdn0101.github.io/20191016/Dice_Main_2.html" target="_blank">Dice_Main_2</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191016/Progx.html" target="_blank">Studentx, Progx</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191016/AreaExam.html" target="_blank">AreaTest, AreaExam</a></li>
     </ol>
     </li>
     </ul>
