--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
       <li><a href="https://dmsdn0101.github.io/20191016/AreaExam.html" target="_blank">AreaTest, AreaExam</a></li>
     </ol>
     </li>
+    <li id="week01">10주
+    <ol type="1">
+      <li><a href="https://dmsdn0101.github.io/20191107/select_passwd.html" target="_blank">select_passwd</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191107/update_passwd.html" target="_blank">update_passwd</a></li>
+    </ol>
+    </li>
     </ul>
   </section>
   </body>
