--- a/20191107/update_passwd.html
+++ b/20191107/update_passwd.html
@@ -12,6 +12,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <title>10주차</title></head>
 <body><header></header><section>
+  <p>주소</p>
+  <a href="http://203.237.142.245/~s20151671/week10/update_passwd.jsp" target="_blank">update_passwd.jsp</a>
   <h4>결과물</h4>
   <p>소스코드</p>
   <picture>
