--- a/index.html
+++ b/index.html
@@ -69,12 +69,15 @@
       <li><a href="https://dmsdn0101.github.io/20191016/Dice_Main_2.html" target="_blank">Dice_Main_2</a></li>
       <li><a href="https://dmsdn0101.github.io/20191016/Progx.html" target="_blank">Studentx, Progx</a></li>
       <li><a href="https://dmsdn0101.github.io/20191016/AreaExam.html" target="_blank">AreaTest, AreaExam</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191107/lotto.html" target="_blank">lotto</a></li>
     </ol>
     </li>
     <li id="week01">10주
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/20191107/select_passwd.html" target="_blank">select_passwd</a></li>
       <li><a href="https://dmsdn0101.github.io/20191107/update_passwd.html" target="_blank">update_passwd</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191107/insert_data.html" target="_blank">insert_data</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191107/delete_data.html" target="_blank">delete_data</a></li>
     </ol>
     </li>
     </ul>
