--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <li id="week02">2주
     <ol type="1">
       <li><a href="https://dmsdn0101.github.io/20190911/pageTest.html" target="_blank">pageTest</a></li>
-      <li><a href="https://dmsdn0101.github.io/20190911/pageTest1.html" target="_blank">pageTest1(과제)</a></li>
+      <li><a href="https://dmsdn0101.github.io/20190911/pageTest1.html" target="_blank">pageTest1(HW)</a></li>
     </ol>
     </li>
     </br>
@@ -69,7 +69,7 @@
       <li><a href="https://dmsdn0101.github.io/20191016/Dice_Main_2.html" target="_blank">Dice_Main_2</a></li>
       <li><a href="https://dmsdn0101.github.io/20191016/Progx.html" target="_blank">Studentx, Progx</a></li>
       <li><a href="https://dmsdn0101.github.io/20191016/AreaExam.html" target="_blank">AreaTest, AreaExam</a></li>
-      <li><a href="https://dmsdn0101.github.io/20191107/lotto.html" target="_blank">lotto</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191107/lotto.html" target="_blank">lotto(HW)</a></li>
     </ol>
     </li>
     <li id="week01">10주
