--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
       <li><a href="https://dmsdn0101.github.io/20191113/pupdate_passwd.html" target="_blank">pupdate_passwd</a></li>
       <li><a href="https://dmsdn0101.github.io/20191113/Mdelete.html" target="_blank">Mdelete, Dbmain_Temp</a></li>
       <li><a href="https://dmsdn0101.github.io/20191113/Minsert.html" target="_blank">Minsert, Dbmain_Temp</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191114/Mselect.html" target="_blank">Mselect, Dbmain_Temp</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191114/Mupdate.html" target="_blank">Mupdate, Dbmain_Temp</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191114/Dbmain_Temp.html" target="_blank">Dbmain_Temp 최종본</a></li>
     </ol>
     </li>
     </ul>
   </section>
   </body>
 </head>
-
-  
