--- a/20191114/Mupdate.html
+++ b/20191114/Mupdate.html
@@ -18,9 +18,13 @@
     <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191114/picture/Mupdate.png">
     <img src="https://dmsdn0101.github.io/20191114/picture/Mupdate_1.png" alt="Error" style="width:auto;">
   </picture>
+  <picture>
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191114/picture/Dbmain_Temp4.png">
+    <img src="https://dmsdn0101.github.io/20191114/picture/Dbmain_Temp4_1.png" alt="Error" style="width:auto;">
+  </picture>
   <p>결과화면</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191113/picture/Dbmain_Temp4_hp.png">
+    <source media="(min-width: 768px)" srcset="https://dmsdn0101.github.io/20191114/picture/Dbmain_Temp4_hp.png">
     <img src="https://dmsdn0101.github.io/20191114/picture/Dbmain_Temp4_hp_1.png" alt="Error" style="width:auto;">
   </picture>
 </section>
