--- a/20191120/beanHome.html
+++ b/20191120/beanHome.html
@@ -27,4 +27,4 @@ ul.level_1 > li > ul {list-style:none;}
 <li><a href="./beanLogin.html">로그인</a></li><li><a href="./beanReg.html">회원등록</a></li></ul></nav>
 <section>
 </section>
-<footer><p><&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
+<footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
