--- a/20191120/beanFind.html
+++ b/20191120/beanFind.html
@@ -35,7 +35,7 @@ ul.level_1 > li > ul {list-style:none;}
   </select>
   <input id="find_form" type="text" name="stud_search" size="20" maxlength="50"/>
   <input type="submit" value="검색">
-  <button><a href="./beanResult.html">결과예시</a></button>
+  <button><a href="https://dmsdn0101.github.io/20191120/beanResult.html">결과예시</a></button>
   </fieldset>
 </form></section>
 <footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
