--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <li><a href="https://dmsdn0101.github.io/20191120/today.html" target="_blank">today</a></li>
       <li><a href="https://dmsdn0101.github.io/20191120/select_passwd.html" target="_blank">select_passwd</a></li>
       <li><a href="https://dmsdn0101.github.io/20191120/update_passwd.html" target="_blank">update_passwd</a></li>
-      <li><a href="https://dmsdn0101.github.io/20191120/beanHome.html" target="_blank">beanHome</a></li>
+      <li><a href="https://dmsdn0101.github.io/20191120/beanHome.html" target="_blank">beanHome1</a></li>
     </ol>
     </li>
     </ul>
