--- a/homework/CPUHome.html
+++ b/homework/CPUHome.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--   ~/CPUHome.html   -->
 <html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <style> * {padding:0; margin:0;}
-body {font-family: Verdana, sans-serif; font-size:0.8em}
+body {font-family: Verdana, sans-serif; font-size:0.8em; background:#98ddde;}
 header, nav, section, article, aside, footer {border:1px solid gray; margin:5px; padding:8px;}
 nav ul{margin:0; padding:0;}
 nav ul li{display:inline; margin:5px;}
