--- a/homework/CPUFind.html
+++ b/homework/CPUFind.html
@@ -26,9 +26,9 @@ ul.level_1 > li > ul {list-style:none;}
 <img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
 <h2>CPU관리에 환영합니다</h2></header>
 <nav><ul>
-<li><a href="./beanLogout.html">로그아웃</a></li><li><a href="./beanFind.html">검색</a></li></ul></nav>
+<li><a href="./CPULogout.html">로그아웃</a></li><li><a href="./CPUFind.html">검색</a></li></ul></nav>
 <section>
-<form action="./beanResult.jps" method="post">
+<form action="./CPUResult.jps" method="post">
   <fieldset class="fset"><legend>검색</legend>
   <select name="search_select">
     <option value="stud_all" selected>전체</option>
@@ -37,7 +37,7 @@ ul.level_1 > li > ul {list-style:none;}
   </select>
   <input id="find_form" type="text" name="stud_search" size="20" maxlength="50"/>
   <input type="submit" value="검색">
-  <button><a href="https://dmsdn0101.github.io/20191120/beanResult.html">결과예시</a></button>
+  <button><a href="https://dmsdn0101.github.io/20191120/CPUResult.html">결과예시</a></button>
   </fieldset>
 </form></section>
 <footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
