--- a/homework/CPULogin.html
+++ b/homework/CPULogin.html
@@ -25,10 +25,10 @@ ul.level_1 > li > ul {list-style:none;}
 </style><title>웹서버 프로그래밍</title></head>
 <body><header><h2>CPU관리에 환영합니다</h2></header>
 <nav><ul>
-<li><a href="./beanLogin.html">로그인</a></li><li><a href="./beanReg.html">회원등록</a></li></ul></nav>
+<li><a href="./CPULogin.html">로그인</a></li><li><a href="./CPUReg.html">회원등록</a></li></ul></nav>
 <section>
   <fieldset class="fset"><legend>로그인</legend>
-  <form action="./beanLogin.jsp" method="post">
+  <form action="./CPULogin.jsp" method="post">
   <ul class="level_1">
   <li>
     <ul class="level_2">
