--- a/homework/CPULogout.html
+++ b/homework/CPULogout.html
@@ -26,9 +26,9 @@ ul.level_1 > li > ul {list-style:none;}
 <img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
 <h2>CPU관리에 환영합니다</h2></header>
 <nav><ul>
-<li><a href="./beanLogin.html">로그인</a></li><li><a href="./beanReg.html">회원등록</a></li></ul></nav>
+<li><a href="./CPULogin.html">로그인</a></li><li><a href="./CPUReg.html">회원등록</a></li></ul></nav>
 <section>
 <h4>로그아웃 상태</h4>
-<a href="./beanHome.html">홈페이지로 이동</a>
+<a href="./CPUHome.html">홈페이지로 이동</a>
 </section>
 <footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
