--- a/homework/CPUMem.html
+++ b/homework/CPUMem.html
@@ -26,7 +26,7 @@ ul.level_1 > li > ul {list-style:none;}
 <img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
 <h2>CPU관리에 환영합니다</h2></header>
 <nav><ul>
-<li><a href="./beanLogout.html">로그아웃</a></li><li><a href="./beanFind.html">검색</a></li></ul></nav>
+<li><a href="./CPULogout.html">로그아웃</a></li><li><a href="./CPUFind.html">검색</a></li></ul></nav>
 <section>
 </section>
 <footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
