--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -26,9 +26,9 @@ ul.level_1 > li > ul {list-style:none;}
 <img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
 <h2>실습을 환영합니다</h2></header>
 <nav><ul>
-<li><a href="./beanLogin.html">로그인</a></li><li><a href="./beanReg.html">회원등록</a></li></ul></nav>
+<li><a href="./CPULogin.html">로그인</a></li><li><a href="./CPUReg.html">회원등록</a></li></ul></nav>
 <section>
-  <form action="./beanReg.jsp" method="post">
+  <form action="./CPUReg.jsp" method="post">
     <fieldset class="fset"><legend>회원등록</legend>
     <fieldset class="fset"><legend>이름/이메일</legend>
     <label class="label_form" for="stud_name">이름</label>
