--- a/homework/CPUResult.html
+++ b/homework/CPUResult.html
@@ -31,7 +31,7 @@ table.ex1 {table-layout:auto;}
 <img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
 <h2>CPU관리에 환영합니다</h2></header>
 <nav><ul>
-<li><a href="./beanLogout.html">로그아웃</a></li><li><a href="./beanFind.html">검색</a></li></ul></nav>
+<li><a href="./CPULogout.html">로그아웃</a></li><li><a href="./CPUFind.html">검색</a></li></ul></nav>
 <section>
   <fieldset class="fset"><legend>검색결과</legend>
   <div style="overflow-x:auto; overflow-y:auto;">
