--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -73,11 +73,12 @@ ul.level_1 > li > ul {list-style:none;}
         <option value="i5-4690">i5-4690</option>
         <option value="i7-7700">i7-7700</option>
         <option value="i9-9900">i9-9900</option>
+        <option value="add">추가 예정</option>
      </optgroup>
      <optgroup label="암드">
         <option value="ryzen 5 1600">ryzen 5 1600</option>
         <option value="ryzen 5 2600">ryzen 5 2600</option>
-        <option value="ryzen 5 3600">ryzen 5 3600</option>
+        <option value="add">추가 예정</option>
      </optgroup>
     </select>
     </fieldset>
