--- a/20191120/beanReg.html
+++ b/20191120/beanReg.html
@@ -24,7 +24,7 @@ ul.level_1 > li > ul {list-style:none;}
 </style><title>로그인 실습</title></head>
 <body><header><h2>실습을 환영합니다</h2></header>
 <nav><ul>
-<li><a href="./beanLogin.html">로그인</a></li><li><a href="./beanReg.html">회원등록</a></li></ul></nav>
+<li><a href="http://203.237.142.245/~s20151671/week13/beanReg.jsp">로그인</a></li><li><a href="./beanReg.html">회원등록</a></li></ul></nav>
 <section>
   <form action="./beanReg.jsp" method="post">
     <fieldset class="fset"><legend>회원등록</legend>
