--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -21,10 +21,10 @@ ul.level_1 > li > ul {list-style:none;}
 .level_2 span {display:inline-block; width:70px;}
 .level_2 input {width:100px;}
 #loginBtn button {margin-left:5px; height:42px;}
-</style><title>로그인 실습</title></head>
+</style><title>웹서버 프로그래밍</title></head>
 <body><header>
 <img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
-<h2>실습을 환영합니다</h2></header>
+<h2>CPU 환영합니다</h2></header>
 <nav><ul>
 <li><a href="./CPULogin.html">로그인</a></li><li><a href="./CPUReg.html">회원등록</a></li></ul></nav>
 <section>
