--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <li><a href="https://dmsdn0101.github.io/20191120/select_passwd.html" target="_blank">select_passwd</a></li>
       <li><a href="https://dmsdn0101.github.io/20191120/update_passwd.html" target="_blank">update_passwd</a></li>
       <li><a href="https://dmsdn0101.github.io/20191120/beanHome1.html" target="_blank">beanHome</a></li>
-      <li><a href="https://dmsdn0101.github.io/20191120/CPUHome.html" target="_blank">CPUHome(HW)</a></li>
+      /* <li><a href="https://dmsdn0101.github.io/20191120/CPUHome.html" target="_blank">CPUHome(HW)</a></li> */
     </ol>
     </li>
     </ul>
