--- a/20191120/beanLogin.html
+++ b/20191120/beanLogin.html
@@ -27,7 +27,7 @@ ul.level_1 > li > ul {list-style:none;}
 <li><a href="./beanLogin.html">로그인</a></li><li><a href="./beanReg.html">회원등록</a></li></ul></nav>
 <section>
   <fieldset class="fset"><legend>로그인</legend>
-  <form action="./beanLogin.jsp" method="post">
+  <form action="http://203.237.142.245/~s20151671/week13/beanLogin.jsp" method="post">
   <ul class="level_1">
   <li>
     <ul class="level_2">
