--- a/20191120/beanReg.html
+++ b/20191120/beanReg.html
@@ -21,7 +21,32 @@ ul.level_1 > li > ul {list-style:none;}
 .level_2 span {display:inline-block; width:70px;}
 .level_2 input {width:100px;}
 #loginBtn button {margin-left:5px; height:42px;}
-</style><title>로그인 실습</title></head>
+</style>
+<script src="https://ajax.google.apis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script>
+$(function(){
+	$.ajax({
+  	type:"POST",
+    url:"./idcheck.jsp",
+    data:{
+    	"stud_id":$('#stud_id').val()
+    },
+    success:function(data){
+    	//console.log($.trim(data));
+      if($.trim(data) == "YES"){
+      	//alert('사용가능');
+        $('#idcheck').html('<b style="font-size:14px;color:blue">가능</b>');
+        $('#regBtn').attr('disabled',false);
+      } else{	//alert('사용불가');
+      	$('#idcheck').html('<b style="font-size:14px;color:red">불가</b>');
+        $('#regBtn').attr('disabled',true);
+      }
+    }
+  });
+});
+});
+</script>
+<title>로그인 실습</title></head>
 <body><header><h2>실습을 환영합니다</h2></header>
 <nav><ul>
 <li><a href="./beanLogin.html">로그인</a></li><li><a href="./beanReg.html">회원등록</a></li></ul></nav>
@@ -38,7 +63,7 @@ ul.level_1 > li > ul {list-style:none;}
     <fieldset class="fset"><legend>아이디/비밀번호</legend>
     <label class="label_form" for="stud_id">아이디</label>
     <input type="text" name="stud_id" size="18" maxlength="50" required/>
-      <button id="dupBtn">중복확인</button><br/>
+      <span id="idcheck"></span><br/>
     <label class="label_form" for="stud_passwd">비밀번호</label>
     <input type="password" name="stud_passwd" size="18" maxlength="50" required/><br/>
     </fieldset>
@@ -55,7 +80,7 @@ ul.level_1 > li > ul {list-style:none;}
     <label for="stud_hobby3">독서</label>
     <input class="id_form" type="checkbox" name="stud_hobby" value="독서"/>
     </fieldset><br/>
-    <input class="button_form" type="submit" value="회원등록">
+    <input id="regBtn" class="button_form" type="submit" value="회원등록">
     <input class="button_form" type="reset" value="취 소">
     </fieldset>
   </form></section>
