--- a/20191120/beanReg.html
+++ b/20191120/beanReg.html
@@ -22,7 +22,7 @@ ul.level_1 > li > ul {list-style:none;}
 .level_2 input {width:100px;}
 #loginBtn button {margin-left:5px; height:42px;}
 </style>
-<script src="https://ajax.google.apis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
 $(function(){
 	$.ajax({
