--- a/20191120/beanReg.html
+++ b/20191120/beanReg.html
@@ -25,6 +25,7 @@ ul.level_1 > li > ul {list-style:none;}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script>
 $(function(){
+	$('#stud_id').blur(function){ 
 	$.ajax({
   	type:"POST",
     url:"./idcheck.jsp",
