--- a/20191120/beanReg.html
+++ b/20191120/beanReg.html
@@ -63,7 +63,7 @@ $(function(){
     <input type="text" name="stud_phone" size="18" maxlength="50"/><br/></fieldset>
     <fieldset class="fset"><legend>아이디/비밀번호</legend>
     <label class="label_form" for="stud_id">아이디</label>
-    <input type="text" name="stud_id" size="18" maxlength="50" required/>
+    <input type="text" id="stud_id" name="stud_id" size="18" maxlength="50" required/>
       <span id="idcheck"></span><br/>
     <label class="label_form" for="stud_passwd">비밀번호</label>
     <input type="password" name="stud_passwd" size="18" maxlength="50" required/><br/>
