--- a/20191120/beanReg.html
+++ b/20191120/beanReg.html
@@ -28,7 +28,7 @@ $(function(){
 	$('#stud_id').blur(function){ 
 	$.ajax({
   	type:"POST",
-    url:"./idcheck.jsp",
+    url:"http://203.237.142.245/~s20151671/week13/idcheck.jsp",
     data:{
     	"stud_id":$('#stud_id').val()
     },
