--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--   ~/CPUReg.html   -->
 <html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <style> * {padding:0; margin:0;}
-body {font-family: Verdana, sans-serif; font-size:0.8em; background:#98ddde;}
+body {font-family: Verdana, sans-serif; font-size:0.8em;}
 header, nav, section, article, aside, footer {border:1px solid gray; margin:5px; padding:8px;}
 nav ul{margin:0; padding:0;}
 nav ul li{display:inline; margin:5px;}
@@ -36,22 +36,58 @@ ul.level_1 > li > ul {list-style:none;}
     <label for="stud_gender">AMD</label>
     <input class="id_form" type="radio" name="stud_gender" value="amd"/></fieldset>
     <fieldset class="fset"><legend>세대</legend>
-    <label for="stud_hobby1">인텔 3세대</label>
-    <input class="id_form" type="radio" name="stud_hobby" value="intel3rd"/>
-    <label for="stud_hobby2">인텔 5세대</label>
+    <label for="stud_hobby">인텔 3세대</label>
+    <input class="id_form" type="radio" name="stud_hobby" value="intel3rd" checked/>
+    <label for="stud_hobby">인텔 5세대</label>
     <input class="id_form" type="radio" name="stud_hobby" value="intel5rd"/>
-    <label for="stud_hobby3">인텔 7세대</label>
+    <label for="stud_hobby">인텔 7세대</label>
     <input class="id_form" type="radio" name="stud_hobby" value="intel7rd"/>
-    <label for="stud_hobby4">인텔 9세대</label>
+    <label for="stud_hobby">인텔 9세대</label>
     <input class="id_form" type="radio" name="stud_hobby" value="intel9rd"/>
-    <label for="stud_hobby5">암드 1세대</label>
+    <label for="stud_hobby">암드 1세대</label>
     <input class="id_form" type="radio" name="stud_hobby" value="amd1rd"/>
-    <label for="stud_hobby6">암드 2세대</label>
+    <label for="stud_hobby">암드 2세대</label>
     <input class="id_form" type="radio" name="stud_hobby" value="amd2rd"/>
-    <label for="stud_hobby7">암드 3세대</label>
+    <label for="stud_hobby">암드 3세대</label>
     <input class="id_form" type="radio" name="stud_hobby" value="amd3rd"/>
     </fieldset>
-    <fieldset class="fset"><legend>버전</legend>
+    <fieldset class="fset"><legend>코어</legend>
+    <label for="core">2코어</label>
+    <input class="id_form" type="radio" name="core" value="2co" checked/>
+    <label for="core">4코어</label>
+    <input class="id_form" type="radio" name="core" value="4co"/>
+    <label for="core">6코어</label>
+    <input class="id_form" type="radio" name="core" value="6co"/>
+    <label for="core">8코어</label>
+    <input class="id_form" type="radio" name="core" value="8co"/>
+    <label for="core">12코어</label>
+    <input class="id_form" type="radio" name="core" value="12co"/>
+    </fieldset>
+    <fieldset class="fset"><legend>쓰레드</legend>
+    <label for="thread">2쓰레드</label>
+    <input class="id_form" type="radio" name="Thread" value="2th" checked/>
+    <label for="thread">4쓰레드</label>
+    <input class="id_form" type="radio" name="Thread" value="4th"/>
+    <label for="thread">6쓰레드</label>
+    <input class="id_form" type="radio" name="Thread" value="6th"/>
+    <label for="thread">8쓰레드</label>
+    <input class="id_form" type="radio" name="Thread" value="8th"/>
+    <label for="thread">12쓰레드</label>
+    <input class="id_form" type="radio" name="Thread" value="12th"/>
+    <label for="thread">16쓰레드</label>
+    <input class="id_form" type="radio" name="Thread" value="16th"/>
+    <label for="thread">24쓰레드</label>
+    <input class="id_form" type="radio" name="Thread" value="24th"/>
+    </fieldset>
+    <fieldset class="fset"><legend>기본 클럭</legend>
+    <label for="clock">4.0~4.49GHz</label>
+    <input class="id_form" type="radio" name="clcok" value="4cl" checked/>
+    <label for="clock">3.0~3.99GHz</label>
+    <input class="id_form" type="radio" name="clock" value="3cl"/>
+    <label for="clock">2.0~2.99GHz</label>
+    <input class="id_form" type="radio" name="clock" value="2cl"/>
+    </fieldset>
+    <fieldset class="fset"><legend>모델명</legend>
     <input type="text" name="modelname" size="18" maxlength="50" required/>
     </fieldset><br/>
     <input class="button_form" type="submit" value="제품등록">
