--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -24,7 +24,7 @@ ul.level_1 > li > ul {list-style:none;}
 </style><title>웹서버 프로그래밍</title></head>
 <body><header>
 <img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
-<h2>CPU 환영합니다</h2></header>
+<h2>CPU관리에 오신  환영합니다</h2></header>
 <nav><ul>
 <li><a href="./CPULogin.html">제품검색</a></li><li><a href="./CPUReg.html">제품등록</a></li></ul></nav>
 <section>
