--- a/homework/CPUHome.html
+++ b/homework/CPUHome.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--   ~/CPUHome.html   -->
 <html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <style> * {padding:0; margin:0;}
-body {font-family: Verdana, sans-serif; font-size:0.8em; background:#98ddde;}
+body {font-family: Verdana, sans-serif; font-size:0.8em;}
 header, nav, section, article, aside, footer {border:1px solid gray; margin:5px; padding:8px;}
 nav ul{margin:0; padding:0;}
 nav ul li{display:inline; margin:5px;}
@@ -25,7 +25,7 @@ ul.level_1 > li > ul {list-style:none;}
 <body><header><img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
 <h2>CPU관리</h2></header>
 <nav><ul>
-<li><a href="./CPULogin.html">로그인</a></li><li><a href="./CPUReg.html">회원등록</a></li></ul></nav>
+<li><a href="./CPUFind.html">제품검색</a></li><li><a href="./CPUReg.html">제품등록</a></li></ul></nav>
 <section>
 </section>
 <footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
