--- a/homework/CPUResult.html
+++ b/homework/CPUResult.html
@@ -1,7 +1,7 @@
 <!doctype html> <!--   ~/CPUResult.html   -->
 <html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
 <style> * {padding:0; margin:0;}
-body {font-family: Verdana, sans-serif; font-size:0.8em; background:#98ddde;}
+body {font-family: Verdana, sans-serif; font-size:0.8em;}
 header, nav, section, article, aside, footer {border:1px solid gray; margin:5px; padding:8px;}
 nav ul{margin:0; padding:0;}
 nav ul li{display:inline; margin:5px;}
@@ -31,13 +31,13 @@ table.ex1 {table-layout:auto;}
 <img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
 <h2>CPU관리에 환영합니다</h2></header>
 <nav><ul>
-<li><a href="./CPULogout.html">로그아웃</a></li><li><a href="./CPUFind.html">검색</a></li></ul></nav>
+<li><a href="./CPUHome.html">홈</a></li><li><a href="./CPUReg.html">제품등록</a></li><li><a href="./CPUFind.html">제품검색</a></li></ul></nav>
 <section>
   <fieldset class="fset"><legend>검색결과</legend>
   <div style="overflow-x:auto; overflow-y:auto;">
     <table class="ex1">
-      <tr><th>아이디</th><th>이름</th><th>전화</th><th>이메일</th><th>취미</th></tr>
-      <tr><th>mrlee</th><th>이몽룡</th><th>010-1234-5678</th><th>mrlee@abc.com</th><th>바둑</th></tr>
+      <tr><th>모델명</th><th>회사</th><th>세대</th><th>코어</th><th>쓰레드</th><th>기본 클럭</th></tr>
+      <tr><th>Ryzen 5 3600</th><th>AMD</th><th>3세대</th><th>6코어</th><th>12쓰레드</th><th>3.6GHz</th></tr>
     </table></div>
   </fieldset>
 </section>
