--- a/homework/CPUHome.html
+++ b/homework/CPUHome.html
@@ -25,7 +25,7 @@ ul.level_1 > li > ul {list-style:none;}
 <body><header><img src="https://dmsdn0101.github.io/homework/picture/wallpaper-424947.jpg" height="200px" width="100%">
 <h2>CPU관리</h2></header>
 <nav><ul>
-<li><a href="./CPUFind.html">제품검색</a></li><li><a href="./CPUReg.html">제품등록</a></li></ul></nav>
+<li><a href="./CPULogin.html">제품검색</a></li><li><a href="./CPUReg.html">제품등록</a></li></ul></nav>
 <section>
 </section>
 <footer><p>&copy; 20XX Made by Korea. All rights reserved.</p></footer></body></html>
