--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -117,7 +117,7 @@ $(function(){
     <input type="text" id="name" name="modelname" size="18" maxlength="50" required/>
       <span id="idcheck"></span><br/>
     </fieldset><br/>
-    <input class="button_form" type="submit" value="제품등록">
+    <input id="regBtn" class="button_form" type="submit" value="제품등록">
     <input class="button_form" type="reset" value="취 소">
     </fieldset>
   </form></section>
