--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -54,67 +54,67 @@ $(function(){
 <nav><ul>
 <li><a href="./CPUFind.html">제품검색</a></li><li><a href="./CPUHome.html">홈</a></li></ul></nav>
 <section>
-  <form action="./CPUReg.jsp" method="post">
+  <form action="http://203.237.142.245/~s20151671/homework/beanReg.jsp" method="post">
     <fieldset class="fset"><legend>제품등록</legend>
     <fieldset class="fset"><legend>회사</legend>
-    <label for="stud_gender">Intel</label>
-    <input class="id_form" type="radio" name="stud_gender" value="intel" checked/>
-    <label for="stud_gender">AMD</label>
-    <input class="id_form" type="radio" name="stud_gender" value="amd"/></fieldset>
+    <label for="company">Intel</label>
+    <input class="id_form" type="radio" name="company" value="intel" checked/>
+    <label for="company">AMD</label>
+    <input class="id_form" type="radio" name="company" value="amd"/></fieldset>
     <fieldset class="fset"><legend>세대</legend>
-    <label for="stud_hobby">인텔 3세대</label>
-    <input class="id_form" type="radio" name="stud_hobby" value="intel3rd" checked/>
-    <label for="stud_hobby">인텔 5세대</label>
-    <input class="id_form" type="radio" name="stud_hobby" value="intel5rd"/>
-    <label for="stud_hobby">인텔 7세대</label>
-    <input class="id_form" type="radio" name="stud_hobby" value="intel7rd"/>
-    <label for="stud_hobby">인텔 9세대</label>
-    <input class="id_form" type="radio" name="stud_hobby" value="intel9rd"/>
-    <label for="stud_hobby">암드 1세대</label>
-    <input class="id_form" type="radio" name="stud_hobby" value="amd1rd"/>
-    <label for="stud_hobby">암드 2세대</label>
-    <input class="id_form" type="radio" name="stud_hobby" value="amd2rd"/>
-    <label for="stud_hobby">암드 3세대</label>
-    <input class="id_form" type="radio" name="stud_hobby" value="amd3rd"/>
+    <label for="generation">인텔3세대</label>
+    <input class="id_form" type="radio" name="generation" value="인텔3세대" checked/>
+    <label for="generation">인텔5세대</label>
+    <input class="id_form" type="radio" name="generation" value="인텔5세대"/>
+    <label for="generation">인텔7세대</label>
+    <input class="id_form" type="radio" name="generation" value="인텔7세대"/>
+    <label for="generation">인텔9세대</label>
+    <input class="id_form" type="radio" name="generation" value="인텔9세대"/>
+    <label for="generation">암드1세대</label>
+    <input class="id_form" type="radio" name="generation" value="암드1세대"/>
+    <label for="generation">암드2세대</label>
+    <input class="id_form" type="radio" name="generation" value="암드2세대"/>
+    <label for="generation">암드3세대</label>
+    <input class="id_form" type="radio" name="generation" value="암드3세대"/>
     </fieldset>
     <fieldset class="fset"><legend>코어</legend>
     <label for="core">2코어</label>
-    <input class="id_form" type="radio" name="core" value="2co" checked/>
+    <input class="id_form" type="radio" name="core" value="2코어" checked/>
     <label for="core">4코어</label>
-    <input class="id_form" type="radio" name="core" value="4co"/>
+    <input class="id_form" type="radio" name="core" value="4코어"/>
     <label for="core">6코어</label>
-    <input class="id_form" type="radio" name="core" value="6co"/>
+    <input class="id_form" type="radio" name="core" value="6코어"/>
     <label for="core">8코어</label>
-    <input class="id_form" type="radio" name="core" value="8co"/>
+    <input class="id_form" type="radio" name="core" value="8코어"/>
     <label for="core">12코어</label>
-    <input class="id_form" type="radio" name="core" value="12co"/>
+    <input class="id_form" type="radio" name="core" value="12코어"/>
     </fieldset>
     <fieldset class="fset"><legend>쓰레드</legend>
     <label for="thread">2쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="2th" checked/>
+    <input class="id_form" type="radio" name="Thread" value="2쓰레드" checked/>
     <label for="thread">4쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="4th"/>
+    <input class="id_form" type="radio" name="Thread" value="4쓰레드"/>
     <label for="thread">6쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="6th"/>
+    <input class="id_form" type="radio" name="Thread" value="6쓰레드"/>
     <label for="thread">8쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="8th"/>
+    <input class="id_form" type="radio" name="Thread" value="8쓰레드"/>
     <label for="thread">12쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="12th"/>
+    <input class="id_form" type="radio" name="Thread" value="12쓰레드"/>
     <label for="thread">16쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="16th"/>
+    <input class="id_form" type="radio" name="Thread" value="16쓰레드"/>
     <label for="thread">24쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="24th"/>
+    <input class="id_form" type="radio" name="Thread" value="24쓰레드"/>
     </fieldset>
     <fieldset class="fset"><legend>기본 클럭</legend>
     <label for="clock">4.0~4.49GHz</label>
-    <input class="id_form" type="radio" name="clcok" value="4cl" checked/>
+    <input class="id_form" type="radio" name="clcok" value="4.0~4.49GHz" checked/>
     <label for="clock">3.0~3.99GHz</label>
-    <input class="id_form" type="radio" name="clock" value="3cl"/>
+    <input class="id_form" type="radio" name="clock" value="3.0~3.99GHz"/>
     <label for="clock">2.0~2.99GHz</label>
-    <input class="id_form" type="radio" name="clock" value="2cl"/>
+    <input class="id_form" type="radio" name="clock" value="2.0~2.99GHz"/>
     </fieldset>
     <fieldset class="fset"><legend>모델명</legend>
-    <input type="text" id="name" name="modelname" size="18" maxlength="50" required/>
+    <input type="text" id="name" name="name" size="18" maxlength="50" required/>
       <span id="idcheck"></span><br/>
     </fieldset><br/>
     <input id="regBtn" class="button_form" type="submit" value="제품등록">
