--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -107,7 +107,7 @@ $(function(){
     </fieldset>
     <fieldset class="fset"><legend>기본 클럭</legend>
     <label for="clock">4.0~4.49GHz</label>
-    <input class="id_form" type="radio" name="clcok" value="4.0~4.49GHz" checked/>
+    <input class="id_form" type="radio" name="clock" value="4.0~4.49GHz" checked/>
     <label for="clock">3.0~3.99GHz</label>
     <input class="id_form" type="radio" name="clock" value="3.0~3.99GHz"/>
     <label for="clock">2.0~2.99GHz</label>
