--- a/homework/CPUReg.html
+++ b/homework/CPUReg.html
@@ -91,19 +91,19 @@ $(function(){
     </fieldset>
     <fieldset class="fset"><legend>쓰레드</legend>
     <label for="thread">2쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="2쓰레드" checked/>
+    <input class="id_form" type="radio" name="thread" value="2쓰레드" checked/>
     <label for="thread">4쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="4쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="4쓰레드"/>
     <label for="thread">6쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="6쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="6쓰레드"/>
     <label for="thread">8쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="8쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="8쓰레드"/>
     <label for="thread">12쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="12쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="12쓰레드"/>
     <label for="thread">16쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="16쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="16쓰레드"/>
     <label for="thread">24쓰레드</label>
-    <input class="id_form" type="radio" name="Thread" value="24쓰레드"/>
+    <input class="id_form" type="radio" name="thread" value="24쓰레드"/>
     </fieldset>
     <fieldset class="fset"><legend>기본 클럭</legend>
     <label for="clock">4.0~4.49GHz</label>
