--- a/homework/CPUFind.html
+++ b/homework/CPUFind.html
@@ -28,12 +28,12 @@ ul.level_1 > li > ul {list-style:none;}
 <nav><ul>
 <li><a href="./CPUHome.html">홈</a></li><li><a href="./CPUReg.html">제품등록</a></li></ul></nav>
 <section>
-<form action="./CPUResult.jps" method="post">
+<form action="http://203.237.142.245/~s20151671/homework/beanResult.jsp" method="post">
   <fieldset class="fset"><legend>검색</legend>
   <select name="search_select">
     <option value="stud_all" selected>전체</option>
-    <option value="stud_gender">회사</option>
-    <option value="modelname">모델명</option>
+    <option value="company">회사</option>
+    <option value="core">코어</option>
   </select>
   <input id="find_form" type="text" name="stud_search" size="20" maxlength="50"/>
   <input type="submit" value="검색">
